pull RL lang strings up to top level.

--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -92,9 +92,9 @@ $(function () {
 	    {% endif %}
 	</h5>
 	<div class="restricted-list-info">
-		<em>{{ 'decklist.list.restrictedlist.title' | trans }}:</em>
-		<span class="fa {% if decklist.isLegalForJoust %}fa-check text-success{% else %}fa-times text-danger{% endif %}"> {{ 'decklist.list.restrictedlist.joust' | trans }}</span> |
-		<span class="fa {% if decklist.isLegalForMelee %}fa-check text-success{% else %}fa-times text-danger{% endif %}"> {{ 'decklist.list.restrictedlist.melee' | trans }}</span>
+		<em>{{ 'restrictedlist.title' | trans }}:</em>
+		<span class="fa {% if decklist.isLegalForJoust %}fa-check text-success{% else %}fa-times text-danger{% endif %}"> {{ 'restrictedlist.joust' | trans }}</span> |
+		<span class="fa {% if decklist.isLegalForMelee %}fa-check text-success{% else %}fa-times text-danger{% endif %}"> {{ 'restrictedlist.melee' | trans }}</span>
 	</div>
 	</article>
 </td>
