list stark cards in joust RL section.

--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -579,6 +579,18 @@
     </p>
 
     <p>
+        <b><u>Stark</u>:</b><br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/11021" target="_blank">Wyman Manderly</a>
+            <em>(The March on Winterfell, 21)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a>
+            <em>(True Steel, 102)</em>
+        </span>
+    </p>
+    <p>
         <b><u>Tyrell</u>:</b><br>
         <a href="https://thronesdb.com/card/06103" target="_blank">Highgarden Minstrel</a> <em>(The Brotherhood Without
             Banners, 103)</em><br>
