--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -73,17 +73,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="{{ path('decks_list') }}">{{ 'nav.mydecks' | trans }}</a></li>
                         <li><a href="{{ path('decklists_list') }}">{{ 'nav.decklists' | trans }}</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-expanded="false">{{ 'nav.cards' | trans }} <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="{{ path('cards_search') }}">{{ 'nav.advancedsearch' | trans }}</a></li>
-                                <li class="divider"></li>
-                                {% for line in cards_data.allsetsdata() %}
-                                    <li><a href="{{ line['url'] }}">{{ line['label'] }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </li>
+                        <li><a href="{{ path('cards_search') }}">{{ 'nav.cards' | trans }}</a></li>
                         <li class="hidden-sm"><a href="{{ path('card_reviews_list') }}">{{ 'nav.reviews' | trans }}</a>
                         </li>
                         <li class="dropdown">
