export to agot.cards functionality.

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -69,6 +69,7 @@
                                 <li><a id="btn-export-plaintext"
                                        href="#">{{ 'decks.form.export.plaintext' | trans }}</a></li>
                                 <li><a id="btn-export-markdown" href="#">{{ 'decks.form.export.markdown' | trans }}</a>
+                                <li><a id="btn-export-agotcards" href="#">{{ 'decks.form.export.agotcards' | trans }}</a>
                                 </li>
                                 <li class="dropdown-header"><span
                                             class="fa fa-download"></span> {{ 'forms.download' | trans }}</li>
