--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -16,6 +16,7 @@
         <li class="dropdown-header"><span class="fa fa-clipboard"></span> {{ 'forms.export' | trans }}</li>
         <li><a id="btn-export-plaintext" href="#">{{ 'decks.form.export.plaintext' | trans }}</a></li>
         <li><a id="btn-export-markdown" href="#">{{ 'decks.form.export.markdown' | trans }}</a></li>
+        <li><a id="btn-export-agotcards" href="#">{{ 'decks.form.export.agotcards' | trans }}</a></li>
         <li class="dropdown-header"><span class="fa fa-download"></span> {{ 'forms.download' | trans }}</li>
         <li><a href="#" id="btn-download-text">{{ 'decks.form.download.text' | trans }}</a></li>
         <li><a href="#" id="btn-download-text-cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
@@ -31,29 +32,3 @@
         <li><a href="#" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
     </ul>
 </div>
-{#
-<div class="btn-group">
-	<button type="button" class="btn btn-sm btn-default dropdown-toggle " data-toggle="dropdown">
-		<span class="fa fa-clipboard"></span> <span class="hidden-xs">Export</span> <span class="caret"></span>
-	</button>
-	<ul class="dropdown-menu" role="menu">
-		<li><a href="#" id="btn-export-bbcode">bbCode</a></li>
-		<li><a href="#" id="btn-export-markdown">Markdown (Reddit)</a></li>
-		<li><a href="#" id="btn-export-plaintext">plain text</a></li>
-	</ul>
-</div>
-<div class="btn-group">
-	<button type="button" class="btn btn-sm btn-default dropdown-toggle " data-toggle="dropdown">
-		<span class="fa fa-sort"></span> <span class="hidden-xs">Sort</span> <span class="caret"></span>
-	</button>
-	<ul class="dropdown-menu" role="menu" id="menu-sort">
-		<li><a href="#" id="btn-sort-type">by Type</a></li>
-		<li><a href="#" id="btn-sort-position">by Set</a></li>
-		<li><a href="#" id="btn-sort-faction">by Faction</a></li>
-		<li><a href="#" id="btn-sort-name">by Name</a></li>
-	</ul>
-</div>
-<button type="button" id="btn-compare" class="btn btn-sm btn-default">
-	<span class="fa fa-duplicate"></span> <span class="hidden-xs">Compare</span>
-</button>
-#}
