--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -83,7 +83,11 @@
                             <td class="decklist-faction-image hidden-xs">
                                 <img src="/bundles/app/images/factions/{{ decklist.faction.code }}.png">
                                 {% for agenda in decklist.slots.agendas %}
-                                    <img src="{{ agenda.card.imageUrl }}">
+                                    {% if agenda.card.imageUrl %}
+                                        <img src="{{ agenda.card.imageUrl }}">
+                                    {% else %}
+                                        <img src="/bundles/app/images/no-card.png">
+                                    {% endif %}
                                 {% endfor %}
                             </td>
                             <td>
