--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -81,12 +81,15 @@
 
                         <tr>
                             <td class="decklist-faction-image hidden-xs">
-                                <img src="/bundles/app/images/factions/{{ decklist.faction.code }}.png">
+                                <img
+                                    src="/bundles/app/images/factions/{{ decklist.faction.code }}.png"
+                                    title="{{ decklist.faction.name }}"
+                                >
                                 {% for agenda in decklist.slots.agendas %}
                                     {% if agenda.card.imageUrl %}
-                                        <img src="{{ agenda.card.imageUrl }}">
+                                        <img src="{{ agenda.card.imageUrl }}" title="{{ agenda.card.name }}">
                                     {% else %}
-                                        <img src="/bundles/app/images/no-card.png">
+                                        <img src="/bundles/app/images/no-card.png" title="{{ agenda.card.name }}">
                                     {% endif %}
                                 {% endfor %}
                             </td>
