--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -11,10 +11,10 @@
         <td class="decklist-name"><a
                     href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a>
         </td>
-        <td><span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}</td>
-        <td><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbFavorites }}</td>
-        <td><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbComments }}</td>
-        <td><span class="fa fa-code-fork social-icon-version"></span> {{ decklist.version }}</td>
+        <td><span class="fas fa-heart social-icon-like"></span> {{ decklist.nbVotes }}</td>
+        <td><span class="fas fa-star social-icon-favorite"></span> {{ decklist.nbFavorites }}</td>
+        <td><span class="fas fa-comment social-icon-comment"></span> {{ decklist.nbComments }}</td>
+        <td><span class="fas fa-code-branch social-icon-version"></span> {{ decklist.version }}</td>
     </tr>
 {% endmacro %}
 
@@ -36,19 +36,19 @@
 <span class="social-icons">
 	<a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom"
        title="{{ 'decklist.view.social.like' | trans }}">
-		<span class="fa fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
+		<span class="fas fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
 	</a>
 	<a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom"
        title="{{ 'decklist.view.social.favorite' | trans }}">
-		<span class="fa fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
+		<span class="fas fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
 	</a>
 	<a id="social-icon-comment" href="#comment-form" class="social-icon-comment" data-toggle="tooltip"
        data-placement="bottom" title="{{ 'decklist.view.social.comment' | trans }}">
-		<span class="fa fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
+		<span class="fas fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
 	</a>
 	<span class="social-icon-version" data-toggle="tooltip" data-placement="bottom"
           title="{{ 'decklist.view.social.version' | trans }}">
-		<span class="fa fa-code-fork"></span> <span class="num">{{ decklist.version }}</span>
+		<span class="fas fa-code-branch"></span> <span class="num">{{ decklist.version }}</span>
         </a>
 </span>
 {% endmacro %}
