--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -8,8 +8,8 @@
 
 {% macro decklist_table_row(decklist) %}
     <tr>
-        <td class="decklist-name"><a
-                    href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a>
+        <td class="decklist-name">
+            <a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.nameCanonical|e('url') }) }}">{{ decklist.name }}</a>
         </td>
         <td><span class="fas fa-heart social-icon-like"></span> {{ decklist.nbVotes }}</td>
         <td><span class="fas fa-star social-icon-favorite"></span> {{ decklist.nbFavorites }}</td>
@@ -34,27 +34,28 @@
 
 {% macro decklist_social_icons(decklist) %}
 <span class="social-icons">
-	<a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom"
-       title="{{ 'decklist.view.social.like' | trans }}">
-		<span class="fas fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
-	</a>
-	<a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom"
-       title="{{ 'decklist.view.social.favorite' | trans }}">
-		<span class="fas fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
-	</a>
-	<a id="social-icon-comment" href="#comment-form" class="social-icon-comment" data-toggle="tooltip"
-       data-placement="bottom" title="{{ 'decklist.view.social.comment' | trans }}">
-		<span class="fas fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
-	</a>
-	<span class="social-icon-version" data-toggle="tooltip" data-placement="bottom"
-          title="{{ 'decklist.view.social.version' | trans }}">
-		<span class="fas fa-code-branch"></span> <span class="num">{{ decklist.version }}</span>
-        </a>
+    <a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom"
+        title="{{ 'decklist.view.social.like' | trans }}">
+        <span class="fas fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
+    </a>
+    <a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom"
+        title="{{ 'decklist.view.social.favorite' | trans }}">
+        <span class="fas fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
+    </a>
+    <a id="social-icon-comment" href="#comment-form" class="social-icon-comment" data-toggle="tooltip"
+        data-placement="bottom" title="{{ 'decklist.view.social.comment' | trans }}">
+        <span class="fas fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
+    </a>
+    <a class="social-icon-version" data-toggle="tooltip" data-placement="bottom"
+        title="{{ 'decklist.view.social.version' | trans }}">
+        <span class="fas fa-code-branch"></span> <span class="num">{{ decklist.version }}</span>
+    </a>
 </span>
 {% endmacro %}
 
-    {% macro slot_with_icons(slot) %}
-        {{ slot.quantity }}x <span class="icon icon-{{ slot.card.type.code }} fg-{{ slot.card.faction.code }}"></span>
-        <a href="{{ path('cards_zoom', {card_code: slot.card.code }) }}" class="card card-tip"
-           data-code="{{ slot.card.code }}">{{ slot.card.name }} {% if slot.card.isMultiple %}({{ slot.card.pack.code }}) {% endif %}</a>
-    {% endmacro %}
+{% macro slot_with_icons(slot) %}
+    {{ slot.quantity }}x <span class="icon icon-{{ slot.card.type.code }} fg-{{ slot.card.faction.code }}"></span>
+    <a href="{{ path('cards_zoom', {card_code: slot.card.code }) }}" class="card card-tip" data-code="{{ slot.card.code }}">
+        {{ slot.card.name }} {% if slot.card.isMultiple %}({{ slot.card.pack.code }}) {% endif %}
+    </a>
+{% endmacro %}
